--- a/dronix-redisenado/index.html
+++ b/dronix-redisenado/index.html
@@ -1,12 +1,323 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dronix</title>
-    <script type="module" src="/main.jsx"></script>
-  </head>
-  <body class="bg-slate-900 text-white font-sans">
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dronix - Venta y Mantenimiento de Drones</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:wght@300;500&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <style>
+    :root {
+      --primary: #00f7ff;
+      --secondary: #f97316;
+      --bg-gradient: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
+      --glass-bg: rgba(255, 255, 255, 0.05);
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: var(--bg-gradient);
+      color: white;
+      scroll-behavior: smooth;
+    }
+
+    /* Nuevo Navbar Futurista */
+    .navbar {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: var(--glass-bg);
+      backdrop-filter: blur(10px);
+      z-index: 1000;
+      padding: 1rem 0;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .nav-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 2rem;
+    }
+
+    .nav-logo {
+      width: 120px;
+      filter: drop-shadow(0 0 5px var(--primary));
+    }
+
+    .nav-links {
+      display: flex;
+      gap: 2rem;
+    }
+
+    .nav-link {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      position: relative;
+      transition: all 0.3s ease;
+    }
+
+    .nav-link::after {
+      content: '';
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background: var(--primary);
+      transition: width 0.3s ease;
+    }
+
+    .nav-link:hover::after {
+      width: 100%;
+    }
+
+    /* Header Mejorado */
+    header {
+      padding: 150px 50px 100px;
+      text-align: center;
+      position: relative;
+      overflow: hidden;
+    }
+
+    header::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle at 50% 50%, rgba(0, 247, 255, 0.1) 0%, transparent 60%);
+      pointer-events: none;
+    }
+
+    h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 4em;
+      background: linear-gradient(45deg, var(--primary), var(--secondary));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin: 1rem 0;
+      text-shadow: 0 0 15px rgba(0, 247, 255, 0.3);
+    }
+
+    /* Tarjetas de Servicios */
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+      padding: 2rem;
+    }
+
+    .card {
+      background: var(--glass-bg);
+      border-radius: 15px;
+      padding: 2rem;
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 10px 30px rgba(0, 247, 255, 0.1);
+    }
+
+    .card h3 {
+      color: var(--primary);
+      font-family: 'Orbitron', sans-serif;
+      margin: 1rem 0;
+    }
+
+    /* Nuevo diseño para listas */
+    .price-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
+      padding: 2rem;
+    }
+
+    .price-item {
+      display: flex;
+      align-items: center;
+      padding: 1.5rem;
+      background: var(--glass-bg);
+      border-radius: 10px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .price-item i {
+      font-size: 1.5rem;
+      margin-right: 1rem;
+      color: var(--primary);
+    }
+
+    /* Botones Mejorados */
+    .boton-contacto {
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      background: linear-gradient(45deg, var(--primary), var(--secondary));
+      border: none;
+      padding: 1rem 2rem;
+      color: white;
+      font-size: 1.1rem;
+      cursor: pointer;
+      border-radius: 50px;
+      text-decoration: none;
+      transition: all 0.3s ease;
+      box-shadow: 0 5px 15px rgba(0, 247, 255, 0.3);
+    }
+
+    .boton-contacto:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 25px rgba(0, 247, 255, 0.5);
+    }
+
+    /* Sección de Contacto Mejorada */
+    .contact-section {
+      position: relative;
+      padding: 4rem 2rem;
+      text-align: center;
+      background: var(--glass-bg);
+      margin: 4rem auto;
+      max-width: 800px;
+      border-radius: 20px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    /* Redes Sociales Futuristas */
+    .social-links {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin: 3rem 0;
+    }
+
+    .social-link {
+      font-size: 2rem;
+      color: white;
+      transition: all 0.3s ease;
+      position: relative;
+    }
+
+    .social-link:hover {
+      color: var(--primary);
+      transform: translateY(-5px);
+    }
+
+    /* Animaciones Mejoradas */
+    @keyframes float {
+      0% { transform: translateY(0px); }
+      50% { transform: translateY(-20px); }
+      100% { transform: translateY(0px); }
+    }
+
+    .floating {
+      animation: float 3s ease-in-out infinite;
+    }
+
+    /* Diseño Responsivo */
+    @media (max-width: 768px) {
+      .nav-links {
+        display: none;
+      }
+
+      header {
+        padding: 120px 20px 80px;
+      }
+
+      h1 {
+        font-size: 2.5em;
+      }
+
+      .card-grid {
+        grid-template-columns: 1fr;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="nav-container">
+      <img src="logo_dronix.png" alt="Dronix Logo" class="nav-logo">
+      <div class="nav-links">
+        <a href="#servicios" class="nav-link">Servicios</a>
+        <a href="#precios" class="nav-link">Precios</a>
+        <a href="#contacto" class="nav-link">Contacto</a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Header -->
+  <header>
+    <h1 class="floating">DRONIX</h1>
+    <p>Tecnología Aérea de Vanguardia</p>
+  </header>
+
+  <!-- Servicios -->
+  <section id="servicios" class="seccion">
+    <div class="titulo">Nuestros Servicios</div>
+    <div class="card-grid">
+      <div class="card">
+        <i class="fas fa-drone fa-3x"></i>
+        <h3>Venta de Drones</h3>
+        <p>Equipos profesionales y recreativos con tecnología de última generación</p>
+      </div>
+      <div class="card">
+        <i class="fas fa-tools fa-3x"></i>
+        <h3>Mantenimiento</h3>
+        <p>Servicio técnico especializado y actualizaciones de software</p>
+      </div>
+      <div class="card">
+        <i class="fas fa-headset fa-3x"></i>
+        <h3>Asesoría</h3>
+        <p>Soporte personalizado y capacitación técnica especializada</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Precios -->
+  <section id="precios" class="seccion">
+    <div class="titulo">Nuestros Precios</div>
+    <div class="price-list">
+      <div class="price-item">
+        <i class="fas fa-fighter-jet"></i>
+        <div>
+          <h4>Dron Recreativo</h4>
+          <p>$6,500 MXN</p>
+        </div>
+      </div>
+      <!-- Más items de precios... -->
+    </div>
+  </section>
+
+  <!-- Contacto -->
+  <section id="contacto" class="contact-section">
+    <div class="titulo">Contáctanos</div>
+    <p>¿Listo para elevar tu experiencia?</p>
+    <a href="https://wa.me/525667681754" class="boton-contacto">
+      <i class="fab fa-whatsapp"></i>
+      Contactar por WhatsApp
+    </a>
+  </section>
+
+  <!-- Redes Sociales -->
+  <div class="social-links">
+    <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+    <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+    <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+  </div>
+
+  <footer>
+    &copy; 2025 Dronix. Innovación en cada vuelo.
+  </footer>
+</body>
 </html>
